[package]
name = "cenum-derive"
version = "1.0.0"
authors = ["Protryon <max.bruce12@gmail.com>"]
license = "GPL v3.0"
edition = "2018"
publish = false
repository = "https://github.com/Protryon/cenum"
description = "A rust derive macro for C-style primitive enums."
keywords = [ "primitive", "enum" ]
[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["extra-traits", "full"] }
quote = "1.0"
linked-hash-map = "0.5.2"
